# openai-whisper-api-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tasks/: todo.md
tests/: test_cli.py
whisper_cli/: __init__.py  cli.py
